--- a/package.json
+++ b/package.json
@@ -1,9 +1,35 @@
 {
-  "name": "miaoxing-article",
-  "version": "1.0.0",
-  "repository": "https://github.com/miaoxing/article",
+  "name": "@miaoxing/article",
+  "version": "0.1.0",
+  "private": true,
+  "main": "index.js",
+  "author": "twinh",
   "license": "MIT",
+  "workspaces": [
+    "plugins/*"
+  ],
+  "jest": {
+    "preset": "jest-preset-miaoxing"
+  },
+  "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "@mxjs/a-page": "^0.2.8",
+    "@mxjs/a-clink": "^0.1.8",
+    "@mxjs/a-table": "^0.3.11",
+    "@mxjs/a-form": "^0.2.15",
+    "@mxjs/api": "^0.1.3",
+    "@mxjs/actions": "^0.1.3"
+  },
   "devDependencies": {
-    "miaoxing-coding-standards": "^2.0.0"
+    "@miaoxing/dev": "^7.0.1",
+    "@mxjs/test": "^0.1.8",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^11.2.6"
+  },
+  "ciDependencies": {
+    "babel-preset-miaoxing": "miaoxing/babel-preset-miaoxing",
+    "jest-preset-miaoxing": "miaoxing/jest-preset-miaoxing",
+    "@miaoxing/dev": "miaoxing/dev"
   }
 }
