--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   ],
   "license": "MIT",
   "require": {
-    "miaoxing/app": "^0.3.2"
+    "miaoxing/app": "^0.3.2",
+    "miaoxing/link-to": "^0.1.16"
   },
   "require-dev": {
     "miaoxing/dev": "^7.0.1"
