--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
     "preset": "jest-preset-miaoxing"
   },
   "dependencies": {
+    "antd": "^4.15.2",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0",
     "@mxjs/a-page": "^0.2.8",
     "@mxjs/a-clink": "^0.1.8",
     "@mxjs/a-table": "^0.3.11",
     "@mxjs/a-form": "^0.2.15",
     "@mxjs/api": "^0.1.3",
-    "@mxjs/actions": "^0.1.3"
+    "@mxjs/actions": "^0.1.3",
+    "miaoxing": "^0.2.5",
+    "@mxjs/app": "^0.3.2",
+    "@mxjs/upload": "^0.4.2",
+    "@mxjs/ueditor": "^0.1.6"
   },
   "devDependencies": {
     "@miaoxing/dev": "^7.0.1",
     "@mxjs/test": "^0.1.8",
     "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^11.2.6"
+    "@testing-library/react": "^11.2.6",
+    "react-router": "^5.2.0"
   },
   "ciDependencies": {
     "babel-preset-miaoxing": "miaoxing/babel-preset-miaoxing",
