--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "miaoxing/article",
+  "type": "miaoxing-plugin",
   "description": "Miaoxing Article Plugin",
   "keywords": [
     "miaoxing",
