--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "antd": "^4.15.2",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "@mxjs/a-page": "^0.2.8",
     "@mxjs/a-clink": "^0.1.8",
     "@mxjs/a-table": "^0.3.11",
