--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "moduleNameMapper": {
       "@tarojs/components": "@tarojs/components/dist-h5/react",
       "@tarojs/taro": "@tarojs/taro-h5"
+    },
+    "globals": {
+      "ENABLE_INNER_HTML": true,
+      "ENABLE_ADJACENT_HTML": true,
+      "ENABLE_SIZE_APIS": true
     }
   },
   "dependencies": {
