--- a/package.json
+++ b/package.json
@@ -9,16 +9,7 @@
     "plugins/*"
   ],
   "jest": {
-    "preset": "jest-preset-miaoxing",
-    "moduleNameMapper": {
-      "@tarojs/components": "@tarojs/components/dist-h5/react",
-      "@tarojs/taro": "@tarojs/taro-h5"
-    },
-    "globals": {
-      "ENABLE_INNER_HTML": true,
-      "ENABLE_ADJACENT_HTML": true,
-      "ENABLE_SIZE_APIS": true
-    }
+    "preset": "jest-preset-miaoxing"
   },
   "dependencies": {
     "antd": "^4.15.2",
