--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   ],
   "license": "MIT",
   "require": {
+    "miaoxing/admin": "^0.4.0",
     "miaoxing/app": "^0.4.0",
     "miaoxing/link-to": "^0.1.18"
   },
@@ -30,6 +31,7 @@
     "require-ci": {
       "miaoxing/plugin": "miaoxing/plugin as 0.5.x-dev",
       "miaoxing/services": "miaoxing/services as 0.4.x-dev",
+      "miaoxing/admin": "miaoxing/admin as 0.4.x-dev",
       "wei/wei": "twinh/wei as 0.11.x-dev"
     }
   }
