--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "append-url": "^1.0.14",
     "bootstrap-mobile": "^0.9.3",
     "@mxjs/a-button": "^0.3.0",
-    "@tarojs/components": "^3.3.20",
+    "@tarojs/components": "~3.3.20",
     "@fower/taro": "^1.61.0",
     "@mxjs/m-ret": "^0.1.1",
     "@mxjs/m-rich-text": "^0.1.1",
@@ -44,7 +44,7 @@
     "@mxjs/test": "^0.2.0",
     "@testing-library/react": "^11.2.6",
     "react-router": "^5.2.0",
-    "@tarojs/taro": "^3.3.20"
+    "@tarojs/taro": "~3.3.20"
   },
   "ciDependencies": {
     "miaoxing": "miaoxing/miaoxing-js",
