--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "bootstrap-mobile": "^0.10.2",
     "@mxjs/a-button": "^1.1.2",
     "@tarojs/components": "~3.3.20",
-    "@fower/taro": "^1.70.0",
+    "@fower/taro": "~1.75.0",
     "@mxjs/m-ret": "^1.0.2",
     "@mxjs/m-rich-text": "^1.0.1",
     "@mxjs/m-page": "^1.0.2"
