--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
       "miaoxing/plugin": "miaoxing/plugin as 0.10.x-dev",
       "miaoxing/services": "miaoxing/services as 0.6.x-dev",
       "miaoxing/admin": "miaoxing/admin as 0.9.x-dev",
+      "miaoxing/app": "miaoxing/app as 0.6.x-dev",
       "wei/wei": "twinh/wei as 0.15.x-dev"
     }
   }
