--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "react-router": "^5.2.0",
     "@tarojs/taro": "~3.3.20"
   },
+  "resolutions": {
+    "@fower/core": "~1.75.0"
+  },
   "ciDependencies": {
     "miaoxing": "miaoxing/miaoxing-js",
     "babel-preset-miaoxing": "miaoxing/babel-preset-miaoxing",
