--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
       "miaoxing/services": "miaoxing/services as 0.8.x-dev",
       "miaoxing/admin": "miaoxing/admin as 0.11.x-dev",
       "miaoxing/app": "miaoxing/app as 0.7.x-dev",
-      "wei/wei": "twinh/wei as 0.17.x-dev"
+      "wei/wei": "twinh/wei as 0.17.x-dev",
+      "miaoxing/dev": "miaoxing/dev as 8.x-dev",
+      "miaoxing/phpstan-miaoxing": "miaoxing/phpstan-miaoxing as 2.x-dev"
     }
   }
 }
