--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "antd": "~5.1.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1",
     "@mxjs/a-page": "^2.2.3",
     "@mxjs/a-clink": "^2.0.5",
     "@mxjs/a-table": "^1.6.3",
