refactor(article): 使用 box 组件生成样式

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "~5.1.6",
     "react": ">=16.13.1",
     "react-dom": ">=16.13.1",
+    "@mxjs/a-box": "^1.0.0",
     "@mxjs/a-page": "^2.2.3",
     "@mxjs/a-clink": "^2.0.5",
     "@mxjs/a-table": "^1.6.3",
@@ -29,7 +30,6 @@
     "@mxjs/icons": "^1.0.8",
     "@mxjs/bootstrap": "^0.1.18",
     "@ant-design/icons": "^4.6.2",
-    "@mxjs/css": "^1.1.6",
     "append-url": "^1.0.26",
     "bootstrap-mobile": "^0.10.9",
     "@mxjs/a-button": "^3.0.5",
@@ -54,6 +54,7 @@
     "babel-preset-miaoxing": "miaoxing/babel-preset-miaoxing",
     "jest-preset-miaoxing": "miaoxing/jest-preset-miaoxing",
     "@miaoxing/dev": "miaoxing/dev",
+    "@mxjs/a-box": "miaoxing/mxjs-a-box",
     "@mxjs/a-form": "miaoxing/mxjs-a-form",
     "@mxjs/a-table": "miaoxing/mxjs-a-table",
     "@mxjs/a-clink": "miaoxing/mxjs-a-clink",
