--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "miaoxing": "^0.4.12",
     "@mxjs/app": "^0.6.5",
     "@mxjs/upload": "^0.6.27",
-    "@mxjs/ueditor": "^0.2.29",
+    "@mxjs/a-ueditor": "^1.0.0",
     "prop-types": "^15.7.2",
     "@mxjs/icons": "^1.1.0",
     "@mxjs/bootstrap": "^0.1.19",
