--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mxjs/a-clink": "^3.0.1",
     "@mxjs/a-table": "^1.9.0",
     "@mxjs/a-form": "^3.0.2",
+    "@mxjs/a-section": "^1.0.0",
     "@mxjs/api": "^1.1.0",
     "miaoxing": "^0.4.15",
     "@mxjs/app": "^0.8.0",
@@ -55,6 +56,7 @@
     "@mxjs/a-table": "miaoxing/mxjs-a-table",
     "@mxjs/a-clink": "miaoxing/mxjs-a-clink",
     "@mxjs/a-link-picker": "miaoxing/mxjs-a-link-picker",
+    "@mxjs/a-section": "miaoxing/mxjs-a-section",
     "@mxjs/app": "miaoxing/mxjs-app",
     "@mxjs/m-ret": "miaoxing/mxjs-m-ret",
     "@mxjs/m-rich-text": "miaoxing/mxjs-m-rich-text",
