--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@tarojs/taro": "~3.3.20"
   },
   "resolutions": {
-    "@fower/core": "~1.75.0"
+    "@fower/core": "~1.75.0",
+    "nwsapi": "2.2.0"
   },
   "ciDependencies": {
     "miaoxing": "miaoxing/miaoxing-js",
