--- a/package.json
+++ b/package.json
@@ -29,22 +29,15 @@
     "@ant-design/icons": "^5",
     "append-url": "^1.1.0",
     "bootstrap-mobile": "^0.10.13",
-    "@mxjs/a-button": "^5.2.0",
-    "@tarojs/components": "~3.3.20",
-    "@fower/taro": "~1.75.0",
-    "@mxjs/m-ret": "^1.1.7",
-    "@mxjs/m-rich-text": "^1.2.4",
-    "@mxjs/m-page": "^1.2.7"
+    "@mxjs/a-button": "^5.2.0"
   },
   "devDependencies": {
     "@miaoxing/dev": "^9.2.0",
     "@mxjs/test": "^2.0.5",
     "@testing-library/react": "^14",
-    "react-router": "^6",
-    "@tarojs/taro": "~3.3.20"
+    "react-router": "^6"
   },
   "resolutions": {
-    "@fower/core": "~1.75.0",
     "nwsapi": "2.2.0"
   },
   "ciDependencies": {
@@ -57,9 +50,6 @@
     "@mxjs/a-clink": "miaoxing/mxjs-a-clink",
     "@mxjs/a-link-picker": "miaoxing/mxjs-a-link-picker",
     "@mxjs/a-section": "miaoxing/mxjs-a-section",
-    "@mxjs/app": "miaoxing/mxjs-app",
-    "@mxjs/m-ret": "miaoxing/mxjs-m-ret",
-    "@mxjs/m-rich-text": "miaoxing/mxjs-m-rich-text",
-    "@mxjs/m-page": "miaoxing/mxjs-m-page"
+    "@mxjs/app": "miaoxing/mxjs-app"
   }
 }
